created mobile version of login and registration

--- a/frontend/website/src/css/text.css
+++ b/frontend/website/src/css/text.css
@@ -10,3 +10,10 @@
     text-align: center;
     text-decoration: none;
 }
+
+.softblue-regular {
+    font-size: 16px;
+    font-weight: 400;
+    text-decoration: none;
+    color: #10B5DC;
+}
