--- a/frontend/website/src/App.css
+++ b/frontend/website/src/App.css
@@ -11,6 +11,11 @@
   min-height: 100vh
 }
 
+@media only screen and (max-width: 480px) {
+  .frame {min-height: 80vh;}
+  
+}
+
 .greeting-screen {
   color: #fff;
   overflow: hidden;
