--- a/frontend/website/src/css/common.css
+++ b/frontend/website/src/css/common.css
@@ -170,6 +170,14 @@
     .logo-content {color: #0a4d60; font-size: 32px;}
   }
 
+  @media only screen and (max-width: 480px) {
+  .container {
+      padding-left: 16px;
+      padding-right: 16px;
+    }
+    header { box-shadow: 0px 2px 20px #7c7a7a36; padding-bottom: 5px;}
+  }
+
   /*circle */
   [figure="circle"] {
     border-radius: 50%;
