--- a/frontend/website/src/css/form.css
+++ b/frontend/website/src/css/form.css
@@ -41,8 +41,60 @@
     letter-spacing: 5px;
     font-size: 35px;
     margin-bottom: 25px;
+    font-weight: bold;
 }
 
 .form-button {
     min-width: 180px;
+}
+
+.form-accept {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 0;
+    padding-right: 20px;
+    max-width: 480px;
+}
+
+.form-accept_description {
+    font-size: 14px;
+    line-height: 1.2;
+    color: #666;
+}
+
+.form-accept input[type="checkbox"] {
+    margin-right: 32px;
+}
+
+#formButton .softblue-regular { margin-left: 20px; }
+#loginHeader ~ .form-field { width: 100%;}
+
+/*медиа запросы*/
+@media only screen and (max-width: 480px) {
+    #myFormInput { flex-direction: column;}
+    #formButton { flex-direction: column-reverse;}
+    .form-input { padding: 13px 24px; font-size: 16px;}
+    .form-field { width: 100%!important; margin-bottom: 16px; }
+    .form-accept { padding-left: 10px; padding-right: 0; margin-bottom: 15px;}
+    #formButton .form-button {
+        font-size: 16px;
+        line-height: 24px;
+        margin-bottom: 16px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 250px;
+        border-radius: 4px;
+        height: 50px;
+    }
+    .form-header {     font-size: 28px;  margin-bottom: 16px;}
+
+}
+
+@media (max-width: 767px) {
+    .questions__form-error {
+        left: 26px;
+        top: 29px;
+        font-size: 12px;
+    }
 }
