--- a/frontend/website/src/css/common.css
+++ b/frontend/website/src/css/common.css
@@ -113,6 +113,7 @@
   #menu-toggle {
     position: fixed;
     padding: 0;
+    margin: 0;
     opacity: 0;
     z-index: 10;
     display: block;
@@ -161,6 +162,8 @@
     background: #FFFFFF;
     z-index: 35;
     width: 200px;
+    color: #191818;
+
   }
   
 
@@ -176,6 +179,10 @@
       padding-right: 16px;
     }
     header { box-shadow: 0px 2px 20px #7c7a7a36; padding-bottom: 5px;}
+    .section-title { padding-top: 1vh; font-weight: bold; flex-direction: column;}
+    .section-title h2 { font-size:29px; text-align: center; margin: 0 auto;}
+    .section-title h4 { font-size: 19px; font-weight: 400; text-align: center; margin: 1vh auto;}
+    .fixed { background-color: transparent;}
   }
 
   /*circle */
