--- a/frontend/website/src/App.css
+++ b/frontend/website/src/App.css
@@ -11,8 +11,6 @@
   min-height: 100vh
 }
 
-
-
 .greeting-screen {
   color: #fff;
   overflow: hidden;
@@ -85,8 +83,16 @@
       margin-left: 16px;
 }
 
+ul {
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+a { color: #191818;}
+
 @media only screen and (max-width: 480px) {
-  .frame {min-height: 80vh;}
+  /*.frame {min-height: 80vh;}*/
   .banner .title {font-size: 60px;  max-width: 300px;}
   .banner .subtitle {font-size: 21px; max-width: 215px;}
   .button { min-width: 120px; width: 150px;  height: 50px; background-color: #002C5F; padding: 8px; border-radius: 15px; font-size: 12px;}
