--- a/frontend/website/src/css/common.css
+++ b/frontend/website/src/css/common.css
@@ -106,7 +106,8 @@
     justify-content: space-between;
     padding-left: 20px;
     padding-right: 20px;
-    padding-top: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
   }
   
   
@@ -174,12 +175,12 @@
   }
 
   @media only screen and (max-width: 480px) {
-  .container {
+    .container {
       padding-left: 16px;
       padding-right: 16px;
     }
-    header { box-shadow: 0px 2px 20px #7c7a7a36; padding-bottom: 5px;}
-    .section-title { padding-top: 1vh; font-weight: bold; flex-direction: column;}
+    header { box-shadow: 0px 2px 20px #7c7a7a36;} .margin-header { margin-top: 50px}
+    .section-title { padding-top: 4vh; font-weight: bold; flex-direction: column;} .about-container { padding-top: 0;}
     .section-title h2 { font-size:29px; text-align: center; margin: 0 auto;}
     .section-title h4 { font-size: 19px; font-weight: 400; text-align: center; margin: 1vh auto;}
     .fixed { background-color: transparent;}
