--- a/frontend/website/src/css/index-tariffs.css
+++ b/frontend/website/src/css/index-tariffs.css
@@ -1,35 +1,53 @@
 
-.tariff-holder{
+.tariff-list {
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.tariff-card {
+    width: 350px;
+    height: 350px;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    min-height: 20em;
-    min-width: 20em;
-    background-color: blue;
-    margin: 10px 10px 10px 10px;
+    text-align: center;
+    color: white;
+    transition: .8s;
 }
 
-.rectangle-holder p {
-    margin: 0;
-    font-weight: bold;
+.tariff-card:hover {
+    transform: scale(1.3);
+    color: white;
 }
 
-.tariffs-list-holder {
-    position: absolute;
-    height: 100%;
-    padding-bottom: 2vh;
-}
+
+[color-type="1"] {background-color: #77B6C4;}
+[color-type="2"] {background-color: #66C6E0;}
+[color-type="3"] {background-color: #007AAE;}
+
+
+.arrow { display: none;}
 
 @media only screen and (max-width: 480px) {
-    .tariff-holder { 
-        min-height: 5vh; 
-        justify-content: flex-start; 
-        background-color: transparent;
-        border: solid 1px #D0D0D0;
-        border-radius: 4px;
-        box-shadow: 0px 3px 10px #7a7a7a4d;
-        width: 100%;
-        min-width: 150px;
-        padding-right: 15px;
+    .arrow { display: block;}
+    [color-type="1"], [color-type="2"], [color-type="3"]  {background-color: initial;}
+    .tariff-card {
+        width: initial;
+        height: initial;
+        text-align: initial;
+        color: initial;
     }
-    .tariff-holder p { padding-left: 20px;}
-    .tariffs-list-holder li { flex-direction: column; align-items: flex-start; }   
+    .tariff-card:hover {
+        transform: none;
+        color: initial;
+    }
+}
+
+@media (max-width: 767px){
+    .tariff-list{
+        display: block;
+        text-align: left;
+    }
 }
