--- a/frontend/website/src/css/form.css
+++ b/frontend/website/src/css/form.css
@@ -37,7 +37,6 @@
 }
 
 .form-header {
-    font-family: Orbitron;
     letter-spacing: 5px;
     font-size: 35px;
     margin-bottom: 25px;
@@ -87,7 +86,7 @@
         border-radius: 4px;
         height: 50px;
     }
-    .form-header {     font-size: 28px;  margin-bottom: 16px;}
+    .form-header { font-size: 25px;  margin-bottom: 16px; letter-spacing: 1px;}
 
 }
 
