fixed error view on login page, changed axios API class

--- a/frontend/website/src/css/form.css
+++ b/frontend/website/src/css/form.css
@@ -4,6 +4,8 @@
     width: 125% ;
 }
 
+.form-error-summary {color:red; font:9px; margin-bottom: 10px}
+
 .form-error {
     position: absolute;
     left: 30px;
