--- a/frontend/website/src/css/chat.css
+++ b/frontend/website/src/css/chat.css
@@ -2,20 +2,20 @@ Form Button {
     width: 100%;
 }
 
-h2 {
+.chat h2 {
     color: #313131;
 }
 
-h6 {
+.chat h6 {
     color: greenyellow;
 }
 
-hr.line {
+.chat  hr.line {
     border: 1px solid #313131;
     width: 175px;
 }
 
-.app {
+.chat  .app {
     margin: auto;
     padding-top: 40px;
     width: 96%;
@@ -26,13 +26,13 @@ hr.line {
     flex-direction: column;
 }
 
-.lobby {
+.chat  .lobby {
     width: 400px;
     margin: auto;
 }
 
 
-.leave-room {
+.chat .leave-room {
     text-align: right;
     background-color: red;
     border-radius: 5px;
@@ -45,7 +45,7 @@ hr.line {
 
 
 
-.message-container {
+.chat .message-container {
     height: 600px;    
     background-color: white;
     overflow: auto;
@@ -56,7 +56,7 @@ hr.line {
     align-items: end;
 }
 
-.user-message {
+.chat .user-message {
     text-align: right;
     padding-right: 15px;
     background-color: cadetblue;
@@ -65,7 +65,7 @@ hr.line {
     width: fit-content;
 }
 
-.message {
+.chat .message {
     display: inline-flex;
     margin: 0px auto 0px auto;
     padding: 15px;
@@ -75,34 +75,34 @@ hr.line {
     margin-top: 3px;
 }
 
-.from-user {
+.chat .from-user {
     font-size: small;
     margin-bottom: 3px;
     margin-right: 5px;
     margin: 5px;
 }
 
-.other-message {
+.chat .other-message {
     margin-top: 25px;
     margin: 5px;
     align-self: baseline;
     background-color: #a7a4a4;
 }
 
-.info-message {
+.chat .info-message {
     margin-top: 25px;
     margin: 5px;
     align-self: center;
     background-color: white;
 }
 
-.info-message-text {
+.chat .info-message-text {
     margin-top: 25px;
     color: black;
     font-size: 16px;
 }
 
-.chat-button-start {
+.chat  .chat-button-start {
     width: 35%;
     background-color: aqua;
 }
