--- a/frontend/website/src/css/chat.css
+++ b/frontend/website/src/css/chat.css
@@ -53,7 +53,7 @@ Form Button {
     margin-bottom: 2px;
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .chat .user-message {
