added chat functionality to popupchat

--- a/frontend/website/src/css/popup-chat.css
+++ b/frontend/website/src/css/popup-chat.css
@@ -14,6 +14,13 @@
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 }
 
+.author {
+    font-size: 9px;
+    opacity: 50%;
+    margin-top: -5px;
+    margin-left: 5px;
+}
+
 .popup-chat.closed{
     pointer-events: none;
 }
