--- a/frontend/admin/src/styles/chat.css
+++ b/frontend/admin/src/styles/chat.css
@@ -53,7 +53,7 @@ hr.line {
     margin-bottom: 2px;
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .user-message {
