--- a/frontend/website/src/css/popup-chat.css
+++ b/frontend/website/src/css/popup-chat.css
@@ -152,12 +152,48 @@
     left: 15px;
 }
 
-
-/* Show time only for first message in group */
-
 .message:first-child::before,
 .message-sent+.message-rcvd::before,
 .message-rcvd+.message-sent::before {
-    /* Show only for first message in group */
   display: block;
 }
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    width:inherit;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    text-align: center;
+    width: inherit;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    max-height: 30px;
+}
+
+.dropdown-content a:hover {background-color: #ddd;}
+
+.dropdown:hover .dropdown-content {display: block;}
+
+.dropdown:hover .dropbtn {background-color: #3e8e41;}
